# data_explorer

./: .gitignore  Readme.md  pyproject.toml
api/: Dockerfile  app.py  main.py  utils.py
api/ai_models/: client.py
api/basic_qa/: __init__.py  api.py  models.py  service.py
api/data_models/: __init__.py  messages.py
api/ingestion/: __init__.py  api.py  handler.py
api/models/: documents.py  messages.py
api/qa/: __init__.py  api.py
api/routers/: qa.py
api/utils/: __init__.py  grpc_client.py  utils.py
blog/: Readme.md  basic_qa.md
frontend/streamlit/: Data Explorer.py
frontend/streamlit/pages/: 1_📘_Basic_QA.py
langchain_research/: 4-trimming-messages.ipynb  5-langgraph-and-chathistory.ipynb
rag_research/: data_parsing.ipynb
research/langchain/: 2-function-calling-smolagents.ipynb  3-caching.ipynb
research/notebooks/langchain/: 1-structured-outputs.ipynb
research/streamlit/: Data Explorer.py
research/streamlit/src/: __init__.py
src/chains/: qa_chain.py
src/config/: __init__.py
src/core/: data_models.py
src/parsers/: sources.py
src/qa_agent/: main.py
src/qa_agent/config/: settings.py
src/qa_agent/utilities/: decorators.py  logger.py
src/retrievers/: __init__.py  vector_store.py
src/services/: ingestion_service.py  query_service.py
src/services/core/: __init__.py  ai_models.py  exceptions.py
src/services/ingestion/: main.py
src/services/parser/: content_processors.py  document.py  main.py
src/services/query/: main.py
web/: Dockerfile  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: page.tsx  (+2 more)
(+19 files in other folders)
