[project]
name = "data-explorer"
version = "0.1.0"
description = "ai based data exploration"
authors = [
    {name = "Temiloluwa",email = "temilolu74@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "langchain-chroma (>=0.2.0,<0.3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "llama-index (>=0.12.14,<0.13.0)",
    "llama-index-llms-ollama (>=0.5.0,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.5.1,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.3.2"
black = "^24.10.0"
isort = "^5.13.2"
faiss-cpu = "^1.9.0.post1"

